Fix JCTree$JCImport error during building